Agrego un par de animaciones de phet y codigo de sympy

--- a/meetup/pwl-30-ene-2020/ejemplos.ipynb
+++ b/meetup/pwl-30-ene-2020/ejemplos.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,23 +10,40 @@
     "init_printing(use_latex=True)\n",
     "\n",
     "import sympy\n",
-    "from sympy.physics.quantum import Bra, Ket, Dagger\n",
-    "from sympy import expand, Eq, Symbol, simplify, exp, sin, symbols"
+    "from sympy.physics.quantum import Bra, Ket, Dagger, Operator\n",
+    "from sympy import expand, Eq, Symbol, simplify, exp, sin, symbols, Matrix,Function\n",
+    "from sympy.physics.quantum.constants import hbar"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\hbar$"
+      ],
+      "text/plain": [
+       "ℏ"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "s,y = Bra('phi'), Ket('psi')\n",
-    "alpha, beta = symbols('alpha beta', complex=True)"
+    "alpha, beta = symbols('alpha beta', complex=True)\n",
+    "A = Operator('A')\n",
+    "hbar"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +52,7 @@
        "True"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45,8 +62,432 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": 34,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}1 & -1\\\\3 & 4\\\\0 & 2\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "⎡1  -1⎤\n",
+       "⎢     ⎥\n",
+       "⎢3  4 ⎥\n",
+       "⎢     ⎥\n",
+       "⎣0  2 ⎦"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x, y, z, t = symbols('x y z t')\n",
+    "k, m, n = symbols('k m n', integer=True)\n",
+    "f, g, h = symbols('f g h', cls=Function)\n",
+    "\n",
+    "Matrix([[1, -1], [3, 4], [0, 2]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "$A {\\left\\langle \\phi\\right|}$\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sympy.latex(A*s,mode='inline'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle {\\left|b\\right\\rangle }{\\left\\langle k\\right|} + {\\left|k\\right\\rangle }{\\left\\langle b\\right|}$"
+      ],
+      "text/plain": [
+       "❘b⟩⟨k❘ + ❘k⟩⟨b❘"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sympy.physics.quantum import Ket, Bra, OuterProduct, Dagger\n",
+    "from sympy.physics.quantum import Operator\n",
+    "\n",
+    "k = Ket('k')\n",
+    "b = Bra('b')\n",
+    "op = OuterProduct(k, b)\n",
+    "op + Dagger(op)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle 0$"
+      ],
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sympy.physics.quantum.qubit import Qubit\n",
+    "a= Qubit(0,0,0)\n",
+    "u= Qubit('0101')\n",
+    "( Dagger(u)*a ).doit()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}1\\\\0\\\\0\\\\0\\\\0\\\\0\\\\0\\\\0\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "⎡1⎤\n",
+       "⎢ ⎥\n",
+       "⎢0⎥\n",
+       "⎢ ⎥\n",
+       "⎢0⎥\n",
+       "⎢ ⎥\n",
+       "⎢0⎥\n",
+       "⎢ ⎥\n",
+       "⎢0⎥\n",
+       "⎢ ⎥\n",
+       "⎢0⎥\n",
+       "⎢ ⎥\n",
+       "⎢0⎥\n",
+       "⎢ ⎥\n",
+       "⎣0⎦"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sympy.physics.quantum.represent import represent\n",
+    "represent(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sympy.physics.quantum.qubit import matrix_to_density\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d = matrix_to_density(Matrix([[0,1],[1,2]]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sympy.physics.quantum.density import Density\n",
+    "from sympy.physics.quantum.qubit import Qubit\n",
+    "D = Density([Qubit('00'),0.5],[Qubit('11'),0.5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\rho\\left(\\left( {\\left|00\\right\\rangle }, \\  0.5\\right),\\left( {\\left|11\\right\\rangle }, \\  0.5\\right)\\right)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sympy.latex(D))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}0.5 & 0 & 0 & 0\\\\0 & 0 & 0 & 0\\\\0 & 0 & 0 & 0\\\\0 & 0 & 0 & 0.5\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "⎡0.5  0  0   0 ⎤\n",
+       "⎢              ⎥\n",
+       "⎢ 0   0  0   0 ⎥\n",
+       "⎢              ⎥\n",
+       "⎢ 0   0  0   0 ⎥\n",
+       "⎢              ⎥\n",
+       "⎣ 0   0  0  0.5⎦"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "represent(D)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle 0.5 {\\left|00\\right\\rangle }{\\left\\langle 00\\right|} + 0.5 {\\left|11\\right\\rangle }{\\left\\langle 11\\right|}$"
+      ],
+      "text/plain": [
+       "0.5⋅❘00⟩⟨00❘ + 0.5⋅❘11⟩⟨11❘"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "D.doit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://digitalcommons.calpoly.edu/cgi/viewcontent.cgi?article=1038&context=physsp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from IPython.display import IFrame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"600px\"\n",
+       "            height=\"400px\"\n",
+       "            src=\"https://phet.colorado.edu/sims/html/wave-interference/latest/wave-interference_en.html\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x7f03bc026af0>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "IFrame(src='https://phet.colorado.edu/sims/html/wave-interference/latest/wave-interference_en.html',\n",
+    "       width='600px',\n",
+    "    height='400px')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"600px\"\n",
+       "            height=\"400px\"\n",
+       "            src=\"https://phet.colorado.edu/sims/html/rutherford-scattering/latest/rutherford-scattering_en.html\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x7f03bc026520>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "IFrame(src='https://phet.colorado.edu/sims/html/rutherford-scattering/latest/rutherford-scattering_en.html',\n",
+    "       width='600px',\n",
+    "    height='400px')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"600px\"\n",
+       "            height=\"400px\"\n",
+       "            src=\"https://phet.colorado.edu/sims/html/blackbody-spectrum/latest/blackbody-spectrum_en.html\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x7f03bc026490>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "IFrame(src='https://phet.colorado.edu/sims/html/blackbody-spectrum/latest/blackbody-spectrum_en.html',\n",
+    "       width='600px',\n",
+    "    height='400px')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"600px\"\n",
+       "            height=\"400px\"\n",
+       "            src=\"https://phet.colorado.edu/sims/html/wave-interference/latest/wave-interference_en.html\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x7f03bc026670>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "IFrame(src='https://phet.colorado.edu/sims/html/wave-interference/latest/wave-interference_en.html',\n",
+    "       width='600px',\n",
+    "    height='400px')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
