--- a/meetup/pwl-30-ene-2020/introduccion_a_mc.ipynb
+++ b/meetup/pwl-30-ene-2020/introduccion_a_mc.ipynb
@@ -19,20 +19,140 @@
     "\n",
     "Espectro Atómico (Bohr, DeBroglie)\n",
     "\n",
-    "Momento angular de los electrones/Spin (Stern-Gerlach)\n",
+    "Momento angular de los electrones/Spin (Stern-Gerlach)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$\\require{enclose}\\require{physics}$\n",
+    "$$\\enclose{circle}[mathcolor=\"red\"]{x}\n",
+    "\\enclose{circle}[mathcolor=\"red\"]{\\color{black}{x}}\n",
+    "\\enclose{circle,box}{x}\n",
+    "\\enclose{circle}{\\enclose{box}{x}}$$\n",
     "\n",
+    "$$\\rho\\left(\\left( {\\left|00\\right\\rangle }, \\  0.5\\right),\\left( {\\left|11\\right\\rangle }, \\  0.5\\right)\\right)$$\n",
+    "\n",
+    "$$\\bra{asado}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Primeros modelos matemáticos\n",
     "\n",
     "- Mecánica ondulatoria de Schrodinger\n",
     "- Mecánica matricial de Heisenberg\n",
-    "- Formalización y formulación de Dirac\n",
+    "- Formalización y formulación de Dirac"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Introducción a la matemática de la MC/ Postulados de la MC"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Postulado 1\n",
     "\n",
-    "Introducción a la matemática de la MC/ Postulados de la MC\n",
+    "    El estado de todo sistema físico está representado por un vector (de norma unidad) en un espacio de Hilbert $\\mathcal{H}$ \n",
+    "    \n",
+    "$\\pi$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Postulado 2\n",
+    "\n",
+    "”Todas las propiedades observablesde  un  sistema  físico  se  representan  por  un  operador  lineal  hermítico  que  actúa  sobre $H$” "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Postulado 3\n",
+    "\n",
+    "”Los  resultados  posibles  de  lamedici ́on de cualquier observable $A$ son sus autovalores $a_n$”"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Postulado 4\n",
+    "\n",
+    "\"Si el estado de un sistema es $\\ket{a}$ |ψ〉, la probabilidad de obtener el resul-tadoanen la medici ́on del observableˆAes siempreProb(an∣∣|ψ〉) =〈ψ|Pn|ψ〉, dondePnes el proyectorasociado  al  autovaloran.   SiˆAes  no  degeneradoentoncesPn=|φn〉〈φn|y  la  probabilidad  resultaser Prob(an∣∣|ψ〉) =|〈φn|ψ〉|2.\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Postulado 5\n",
+    "\n",
+    "Postulado  de  proyecci ́on  o  colapso \n",
+    "\n",
+    "Si el estado de un sistema es PSI y medimos el observable A y detectamos el autovalor $a_n$, entonces el estado del sistema después \n",
+    "de la medición es la proyección de PSI sobre el subespacio asociado al autovalor $a_n$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Postulado 2\n",
+    "\n",
+    "”Todas las propiedades observablesde  un  sistema  físico  se  representan  por  un  operador  lineal  hermítico  que  actúa  sobre $H$” \n",
+    "\n",
+    "$\\left\\langle \\phi\\right|$\n",
+    "\n",
+    "$${\\left\\langle \\phi\\right|}$$\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "- Estados\n",
     "- Operadores y Observables\n",
     "- Conmutador\n",
-    "- Evolución de un sistema\n",
-    "\n",
+    "- Evolución de un sistema"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Tópicos extra/ MC moderna/ Información Cuántica:\n",
     "- Paradoja de EPR\n",
     "- Desigualdad de Bell\n",
