Terminar de definir los postulados

--- a/meetup/pwl-30-ene-2020/ejemplos.ipynb
+++ b/meetup/pwl-30-ene-2020/ejemplos.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
        "ℏ"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43,22 +43,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\\left|\\Psi\\right\\rangle }\n",
+      "{\\left\\langle \\Psi\\right|}\n",
+      "{\\left|\\phi_{n}\\right\\rangle }\n",
+      "{\\left\\langle \\phi_{n}\\right|}\n"
+     ]
     }
    ],
    "source": [
-    "alpha.is_complex"
+    "alpha.is_complex\n",
+    "print(sympy.latex(Ket('Psi')))\n",
+    "print(sympy.latex(Bra('Psi')))\n",
+    "print(sympy.latex(Ket('phi_n')))\n",
+    "print(sympy.latex(Bra('phi_n')))"
    ]
   },
   {
