--- a/meetup/pwl-30-ene-2020/introduccion_a_mc.ipynb
+++ b/meetup/pwl-30-ene-2020/introduccion_a_mc.ipynb
@@ -61,9 +61,7 @@
    "source": [
     "## Postulado 1\n",
     "\n",
-    "    El estado de todo sistema físico está representado por un vector (de norma unidad) en un espacio de Hilbert $\\mathcal{H}$ \n",
-    "    \n",
-    "$\\pi$"
+    "El estado de todo sistema físico está representado por un vector (de norma unidad) en un espacio de Hilbert $\\mathcal{H}$ "
    ]
   },
   {
@@ -72,7 +70,7 @@
    "source": [
     "## Postulado 2\n",
     "\n",
-    "”Todas las propiedades observablesde  un  sistema  físico  se  representan  por  un  operador  lineal  hermítico  que  actúa  sobre $H$” "
+    "Todas las propiedades observables de un sistema físico se prepresentan por un operador lineal hermítico que actúa sobre $\\mathcal{H}$"
    ]
   },
   {
@@ -81,41 +79,32 @@
    "source": [
     "## Postulado 3\n",
     "\n",
-    "”Los  resultados  posibles  de  lamedici ́on de cualquier observable $A$ son sus autovalores $a_n$”"
+    "Los resultados posibles de la medición de cualquier observable $A$ son sus autovalores $a_n$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Postulado 4\n",
+    "## Postulado 4 ( Regla de Born )\n",
     "\n",
-    "\"Si el estado de un sistema es $\\ket{a}$ |ψ〉, la probabilidad de obtener el resul-tadoanen la medici ́on del observableˆAes siempreProb(an∣∣|ψ〉) =〈ψ|Pn|ψ〉, dondePnes el proyectorasociado  al  autovaloran.   SiˆAes  no  degeneradoentoncesPn=|φn〉〈φn|y  la  probabilidad  resultaser Prob(an∣∣|ψ〉) =|〈φn|ψ〉|2.\""
+    "\n",
+    "\n",
+    "Si el estado de un sistema es $\\left|\\Psi\\right\\rangle$, la probabilidad de obtener el resultado $a_n$ en la medición del observable $A$ es siempre\n",
+    "\n",
+    "$$ Prob\\left(a_n | \\left|\\Psi\\right\\rangle \\right) = \\left\\langle \\Psi\\right| P_n \\left|\\Psi\\right\\rangle $$\n",
+    "\n",
+    "donde $P_n$ es el proyector asociado al autovalor $a_n$. Si $A$ es no degenerado entonce $P_n = {\\left|\\phi_{n}\\right\\rangle }{\\left\\langle \\phi_{n}\\right|}$ y la probabilidad resulta ser $$Prob\\left( a_n | \\left|\\Psi\\right\\rangle \\right) = \\left|  \\left\\langle \\phi_{n} |\\Psi\\right\\rangle \\right|^2$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Postulado 5\n",
+    "## Postulado 5 ( Postulado de proyección o colapso )\n",
     "\n",
-    "Postulado  de  proyecci ́on  o  colapso \n",
-    "\n",
-    "Si el estado de un sistema es PSI y medimos el observable A y detectamos el autovalor $a_n$, entonces el estado del sistema después \n",
-    "de la medición es la proyección de PSI sobre el subespacio asociado al autovalor $a_n$\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Postulado 2\n",
-    "\n",
-    "”Todas las propiedades observablesde  un  sistema  físico  se  representan  por  un  operador  lineal  hermítico  que  actúa  sobre $H$” \n",
-    "\n",
-    "$\\left\\langle \\phi\\right|$\n",
-    "\n",
-    "$${\\left\\langle \\phi\\right|}$$\n"
+    "Si el estado de un sistema es ${\\left|\\Psi\\right\\rangle }$ y medimos el observable $A$ y detectamos el autovalor $a_n$, entonces el estado del sistema después \n",
+    "de la medición es la proyección de ${\\left|\\Psi\\right\\rangle }$ sobre el subespacio asociado al autovalor $a_n$\n"
    ]
   },
   {
