--- a/meetup/pwl-30-ene-2020/introduccion_a_mc.ipynb
+++ b/meetup/pwl-30-ene-2020/introduccion_a_mc.ipynb
@@ -13,47 +13,195 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Radiacion el Cuerpo Negro y cuantizacion de la energía\n",
+    "# Parte I\n",
     "\n",
-    "Efecto Fotoeléctrico\n",
-    "\n",
-    "Espectro Atómico (Bohr, DeBroglie)\n",
-    "\n",
-    "Momento angular de los electrones/Spin (Stern-Gerlach)"
+    "### El origen de la Mecánica Cuántica"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\\require{enclose}\\require{physics}$\n",
-    "$$\\enclose{circle}[mathcolor=\"red\"]{x}\n",
-    "\\enclose{circle}[mathcolor=\"red\"]{\\color{black}{x}}\n",
-    "\\enclose{circle,box}{x}\n",
-    "\\enclose{circle}{\\enclose{box}{x}}$$\n",
-    "\n",
-    "$$\\rho\\left(\\left( {\\left|00\\right\\rangle }, \\  0.5\\right),\\left( {\\left|11\\right\\rangle }, \\  0.5\\right)\\right)$$\n",
-    "\n",
-    "$$\\bra{asado}$$"
+    "## Episodio I : Old quantum mechanics"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Primeros modelos matemáticos\n",
-    "\n",
-    "- Mecánica ondulatoria de Schrodinger\n",
-    "- Mecánica matricial de Heisenberg\n",
-    "- Formalización y formulación de Dirac"
+    "### Radiación del Cuerpo Negro y cuantización de la energía"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Introducción a la matemática de la MC/ Postulados de la MC"
+    "![](https://upload.wikimedia.org/wikipedia/commons/a/a2/Wiens_law.svg)\n",
+    "\n",
+    "![](https://upload.wikimedia.org/wikipedia/commons/1/18/Mplwp_blackbody_nu_planck-wien-rj_5800K.svg)\n",
+    "\n",
+    "![](https://upload.wikimedia.org/wikipedia/commons/1/19/Black_body.svg)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Efecto Fotoeléctrico"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Espectro Atómico (Bohr, DeBroglie, Sommerfeld, Kramer)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Momento angular de los electrones / Spin (Stern-Gerlach)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Episodio II: Modelos matemáticos de la MC"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Mecánica matricial de Heisenberg\n",
+    "    \n",
+    "$${ dA\\over dt} = i( H A - A H ) $$ . \n",
+    "\n",
+    "![](https://wikimedia.org/api/rest_v1/media/math/render/svg/430a9afbdc6ad2375afcf3ce8f0fd2fafebd7530)\n",
+    "\n",
+    "![](https://wikimedia.org/api/rest_v1/media/math/render/svg/ba09ac56c80f50b23d89d7fe64fde2e65614afd8)\n",
+    "\n",
+    "![](https://wikimedia.org/api/rest_v1/media/math/render/svg/c9bf439b3a5357720fb58674a2c6a9dd6be79328)\n",
+    "\n",
+    "![](https://wikimedia.org/api/rest_v1/media/math/render/svg/343292136796758e06b5fa789ee083e3cd9fc3c5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Mecánica ondulatoria de Schrodinger\n",
+    "\n",
+    "$$i{\\partial \\over \\partial t}\\psi _{t}(x)=\\left[-{1 \\over 2m}{\\partial ^{2} \\over \\partial x^{2}}+V(x)\\right]\\psi _{t}(x)\\,.$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Formalización y notación de Dirac"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sympy import sqrt, symbols, Symbol, init_printing\n",
+    "from sympy.physics.quantum import Bra, Ket, Dagger, Operator\n",
+    "init_printing(use_latex=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\alpha$"
+      ],
+      "text/plain": [
+       "α"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "alpha = Symbol('alpha')\n",
+    "alpha"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle {\\left|\\phi\\right\\rangle }$"
+      ],
+      "text/plain": [
+       "❘φ⟩"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "phi = Ket('phi')\n",
+    "phi"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Introducción a la matemática de la MC / Postulados de la MC"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
