Agrego las imagenes y  formateo

--- a/meetup/pwl-30-ene-2020/ejemplos.ipynb
+++ b/meetup/pwl-30-ene-2020/ejemplos.ipynb
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -124,22 +124,45 @@
        "$\\displaystyle {\\left|b\\right\\rangle }{\\left\\langle k\\right|} + {\\left|k\\right\\rangle }{\\left\\langle b\\right|}$"
       ],
       "text/plain": [
-       "❘b⟩⟨k❘ + ❘k⟩⟨b❘"
+       "|b><k| + |k><b|"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from sympy.physics.quantum import Ket, Bra, OuterProduct, Dagger\n",
+    "from sympy.physics.quantum import Ket, Bra, OuterProduct, Dagger, InnerProduct\n",
     "from sympy.physics.quantum import Operator\n",
     "\n",
     "k = Ket('k')\n",
     "b = Bra('b')\n",
     "op = OuterProduct(k, b)\n",
     "op + Dagger(op)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left\\langle k \\right. {\\left|k\\right\\rangle }$"
+      ],
+      "text/plain": [
+       "<k|k>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "InnerProduct(k.dual,k).doit()"
    ]
   },
   {
@@ -479,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -652,10 +675,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<img src=\"\" width=\"400\" height=\"400\"/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Image object>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Image(url='',width=400,height=400)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "import utils"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<img src=\"https://upload.wikimedia.org/wikipedia/commons/b/b4/Kramers_1928.jpg\" width=\"200\" height=\"200\"/>"
+      ],
+      "text/plain": [
+       "<utils.Photo object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<img src=\"https://cdn.britannica.com/s:300x1000/14/21114-004-FA0334F4/Niels-Bohr.jpg\" width=\"200\" height=\"200\"/>"
+      ],
+      "text/plain": [
+       "<utils.Photo object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "utils.display( utils.Photo('Kramers'),utils.Photo('Bohr') )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import ipywidgets as widgets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c2def01090944c31afe42dc34cb19cfd",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Image(value=b'')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "widgets.Image(url=utils.photo_links['Wien'])"
+   ]
   },
   {
    "cell_type": "code",
@@ -666,6 +797,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
