Ordeno los links

--- a/meetup/pwl-30-ene-2020/introduccion_a_mc.ipynb
+++ b/meetup/pwl-30-ene-2020/introduccion_a_mc.ipynb
@@ -13,6 +13,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {
     "slideshow": {
@@ -470,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -486,7 +514,7 @@
        "<utils.Photo object>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -544,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -560,7 +588,7 @@
        "<utils.Photo object>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -595,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -611,7 +639,7 @@
        "<utils.Photo object>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -622,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -638,7 +666,7 @@
        "<utils.Photo object>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -682,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -698,7 +726,7 @@
        "<utils.Photo object>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -780,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -790,13 +818,13 @@
     {
      "data": {
       "text/html": [
-       "<img src=\"https://cdn.britannica.com/24/13124-004-E329BF69/Max-Born.jpg\" width=\"200\" height=\"200\"/>"
+       "<img src=\"https://cdn.britannica.com/23/26823-050-E778F3DF/John-von-Neumann.jpg\" width=\"200\" height=\"200\"/>"
       ],
       "text/plain": [
        "<utils.Photo object>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -913,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 18,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -927,7 +955,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}0.5 & 0.5\\\\0.5 & 0.5\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "⎡0.5  0.5⎤\n",
+       "⎢        ⎥\n",
+       "⎣0.5  0.5⎦"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Ma"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -945,7 +998,7 @@
        "⎝⎣0.5⎦  ⎣0.666666666666667⎦  ⎣0.01⎦⎠"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -958,7 +1011,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -976,7 +1036,7 @@
        "⎣0.769230769230774⎦"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1010,7 +1070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1048,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1061,10 +1121,10 @@
        "$\\displaystyle \\alpha {\\left|\\psi\\right\\rangle } + \\beta {\\left|\\phi\\right\\rangle }$"
       ],
       "text/plain": [
-       "alpha*|psi> + beta*|phi>"
+       "α⋅❘ψ⟩ + β⋅❘φ⟩"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1079,7 +1139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1092,10 +1152,11 @@
        "$\\displaystyle \\overline{\\alpha} {\\left\\langle \\psi\\right|} + \\overline{\\beta} {\\left\\langle \\phi\\right|}$"
       ],
       "text/plain": [
-       "conjugate(alpha)*<psi| + conjugate(beta)*<phi|"
+       "_       _    \n",
+       "α⋅⟨ψ❘ + β⋅⟨φ❘"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1106,7 +1167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1119,10 +1180,11 @@
        "$\\displaystyle \\left(\\overline{\\alpha} {\\left\\langle \\psi\\right|} + \\overline{\\beta} {\\left\\langle \\phi\\right|}\\right) \\left(\\alpha {\\left|\\psi\\right\\rangle } + \\beta {\\left|\\phi\\right\\rangle }\\right)$"
       ],
       "text/plain": [
-       "(conjugate(alpha)*<psi| + conjugate(beta)*<phi|)*(alpha*|psi> + beta*|phi>)"
+       "⎛_       _    ⎞                \n",
+       "⎝α⋅⟨ψ❘ + β⋅⟨φ❘⎠⋅(α⋅❘ψ⟩ + β⋅❘φ⟩)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1278,7 +1340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1291,7 +1353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1305,7 +1367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1321,7 +1383,7 @@
        "❘j⟩⨂ ❘k⟩"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1357,7 +1419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 28,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1370,7 +1432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1388,7 +1450,7 @@
        "       2        "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
