Agrego más recursos y arreglo el formato

--- a/meetup/pwl-30-ene-2020/introduccion_a_mc.ipynb
+++ b/meetup/pwl-30-ene-2020/introduccion_a_mc.ipynb
@@ -13,35 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -74,6 +46,39 @@
    },
    "source": [
     "## Episodio I : Old quantum mechanics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"600px\"\n",
+       "            height=\"400px\"\n",
+       "            src=\"https://phet.colorado.edu/sims/html/wave-interference/latest/wave-interference_en.html\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x7f7c71f121c0>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "utils.IFrame(src='https://phet.colorado.edu/sims/html/wave-interference/latest/wave-interference_en.html',\n",
+    "       width='600px',\n",
+    "    height='400px')"
    ]
   },
   {
@@ -197,6 +202,39 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"600px\"\n",
+       "            height=\"400px\"\n",
+       "            src=\"https://phet.colorado.edu/sims/html/blackbody-spectrum/latest/blackbody-spectrum_en.html\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x7f7c71f127c0>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "utils.IFrame(src='https://phet.colorado.edu/sims/html/blackbody-spectrum/latest/blackbody-spectrum_en.html',\n",
+    "       width='600px',\n",
+    "    height='400px')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -253,7 +291,9 @@
     }
    },
    "source": [
-    "![](https://i.ytimg.com/vi/n28mmVeKNhs/maxresdefault.jpg)"
+    "![](https://i.ytimg.com/vi/n28mmVeKNhs/maxresdefault.jpg)\n",
+    "\n",
+    "[Simulación interactiva](https://phet.colorado.edu/en/simulation/legacy/photoelectric)"
    ]
   },
   {
@@ -292,6 +332,17 @@
    ],
    "source": [
     "utils.Photo('Rutherford')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "utils.IFrame(src='https://phet.colorado.edu/sims/html/rutherford-scattering/latest/rutherford-scattering_en.html',\n",
+    "       width='600px',\n",
+    "       height='400px')"
    ]
   },
   {
