--- a/meetup/pwl-30-ene-2020/introduccion_a_mc.ipynb
+++ b/meetup/pwl-30-ene-2020/introduccion_a_mc.ipynb
@@ -761,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -771,19 +771,19 @@
     {
      "data": {
       "text/html": [
-       "<img src=\"https://cdn.britannica.com/24/13124-004-E329BF69/Max-Born.jpg\" width=\"200\" height=\"200\"/>"
+       "<img src=\"https://cdn.britannica.com/16/198816-050-AF8B7B3C/Erwin-Schrodinger.jpg\" width=\"200\" height=\"200\"/>"
       ],
       "text/plain": [
        "<utils.Photo object>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "utils.Photo('Born')"
+    "utils.Photo('Schrodinger')"
    ]
   },
   {
